@@ -2,6 +2,7 @@ Revision history for Crypt-Passphrase-Linux
 
 {{$NEXT}}
           - Correctly encode salt in hash_password
+          - Accept legacy crypt values
 
 0.001     2023-03-07 23:53:11+01:00 Europe/Amsterdam
           Initial release to an unsuspecting world
